--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4499716002'>Job Application for Coach, Data Science, Chicago at Flatiron School</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago  Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">Vilnius  Vilnius Berlin Prague Warsaw</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/patientpop/jobs/1922324'>Job Application for Data Science Manager at PatientPop</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/patientpop/jobs/1922324'>Job Application for Data Science Manager at PatientPop</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,11 +159,11 @@
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409032-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409032-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -211,7 +215,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/netflix/2089030b-b32c-491d-9dfd-6685fb3f620c'>Netflix - Senior Data Scientist, Growth Marketing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/2089030b-b32c-491d-9dfd-6685fb3f620c'>Netflix - Senior Data Scientist, Growth Marketing</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -219,7 +223,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bluevine/8f9b61ab-4468-4bd6-93cd-1e9a3acf8622'>BlueVine - Data Science QA Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluevine/8f9b61ab-4468-4bd6-93cd-1e9a3acf8622'>BlueVine - Data Science QA Developer</a></h5> 
 <p><span class="badge badge-light">Tel-Aviv</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -247,11 +251,11 @@ address?...</p>
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
 paid?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
+<h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/optoro/jobs/1921706?gh_jid=1921706'>Job Application for Data Science Intern - Summer 2020 at Optoro</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/optoro/jobs/1921706?gh_jid=1921706'>Job Application for Data Science Intern - Summer 2020 at Optoro</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Please attach a sample of your code. It can be any language or framework, just 
 something you're proud of. Or provide a link to some code for us to look at in the?...</p>
@@ -294,7 +298,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909750'>Job Application for Graduate Data Scientist at Signifyd</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909750'>Job Application for Graduate Data Scientist at Signifyd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -306,7 +310,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/data-science-manager-monetization/1185960?gh_src=c5f46abb1'>Unity Careers - Data Science Manager, Monetization @ San Francisco</a></h5> 
+<h5><a href='https://careers.unity.com/position/data-science-manager-monetization/1185960?gh_src=c5f46abb1'>Unity Careers - Data Science Manager, Monetization @ San Francisco</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -355,7 +359,7 @@ fact, you will be expected to contribute right away as a member of our Scrum?...
 genome sequencing is a reality, high-resolution imaging is becoming routine, 
 and?...</p>
 <hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/UcuLupdSu1/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fractalanalytics.applytojob.com/apply/UcuLupdSu1/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in New York, NY.</p>
 <hr/>
@@ -375,7 +379,7 @@ and?...</p>
 <p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://oviva.recruitee.com/o/data-scientist'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oviva.recruitee.com/o/data-scientist'>
       Data Scientist - Oviva
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
@@ -419,7 +423,7 @@ and?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/app/share/1CurNTNQNx'>Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
@@ -429,7 +433,7 @@ to generate a unique referral link and receive credit for anyone who applies?...
 <p>Oct 13, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in San Francisco, 
 CA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -489,12 +493,6 @@ data processing workflows, using statistics and machine learning algorithms?...<
 <h5><a href='http://levelset.applytojob.com/apply/WTAfcID76P/Associate-Data-Scientist'>Associate Data Scientist - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/7tUkdr4LLM/Senior-Data-Scientist-Quantitative-Research-Financial-Services'>Senior Data Scientist - Quantitative Research (Financial Services ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 15, 2019 ... Company Overview. Fractal Analytics is a strategic AI partner to Fortune 500 
-companies with a vision to power every human decision in the enterprise. Fractal 
-is?...</p>
 <hr/>
 
 
